src/test/resources/semantic/sentences/correct/TC_CREATE_ARRAY2.ru
/? 
struct A{

}

impl A{
    .(){
    }
    fn m1(Int num1)->Array Int{
        Array Int arrayInt;
        Int size;
        arrayInt = new Int[5];
        size = arrayInt.length();
        ret arrayInt;
    }
}

start{
}
