src/test/resources/semantic/sentences/error/TC_ERROR_RETURN_METHOD6.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 12 | COLUMNA 9 | Se esperaba una variable de tipo Array Int y se encontro una de tipo C. |
struct A{

}

impl A{
    .(){
    }
    fn m1(Int num1)->Array Int{
        ret new C();
    }
}

struct B{

}

impl B{
    .(){}
}

struct C{

}

impl C{
    .(){}
}
start{
}
